# reverse-engine-recursive-run

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  Makefile  README.md  ecosystem.yaml  network-map.yaml  pyproject.toml  requirements-research.txt  seed.yaml
.github/workflows/: ci.yml
config/research/: analysis_config.yaml  discovery_config.yaml  prioritization_weights.yaml  similarity_weights.yaml
docs/: ROADMAP_RECURSIVE_RESEARCH_SYSTEM.md  TASK_LIST_RESEARCH_SYSTEM.md
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
docs/pitch/: index.html
docs/research/: README.md  RESEARCH_QUICKSTART.md
scripts/: __main__.py  hotspot_merge.py
scripts/research/: discover_repos.py  extract_tech_stack.py  profile_org.py  similarity_scorer.py
tests/: test_scripts.py
