[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reverse-engine-recursive-run"
version = "0.1.0"
description = "Security analysis toolkit: hotspot detection, ownership drift, vulnerability parsing, and risk consolidation"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["scripts"]
include = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.ruff]
target-version = "py311"
line-length = 100
